forum-gitops/php-app/forum-deployment.yaml
# Laravel App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: devopszone25/forum-pipe-app:latest
          ports:
            - containerPort: 9000
          command: ["/usr/local/bin/docker-entrypoint.sh"]
          args: ["php-fpm"]

---
# Laravel App Service
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
